# inventory-manager

./: CMakeLists.txt  Makefile  README.md  editdialog.h  inventory.c  main.c  mainwindow.c  tags  uitools.h
include/: inventory.h  mainwindow.h  product.h  ui.h
src/: editdialog.c  main.c  mainwindow.c  product.c  ui.c  uitools.c
